Remove template styling to fix center alignment

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -18,5 +18,5 @@
 }
 
 .home .buttons .btn {
-  margin: 1rem;
+  margin: 1rem 1rem 1rem 0;
 }
